--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@
     --text-black-900:#302e4d;
     --text-black-700:#504e70;
 }
+body{
+    line-height: 1.5;
+    font-size: 16px;
+    font-family: 'Poppins' sans-serif;
+}
 *{
     margin: 0;
     padding: 0;
@@ -15,46 +20,45 @@
     list-style: none;
     box-sizing: border-box;
 }
-body{
-    line-height: 1.5;
-    font-family: 'Poppins' sans-serif; /* to be changed montserrat*/
-    font-size: 16px;
-    /* overflow: scroll; */
-}
 ::before,::after{
     box-sizing: border-box;
 }
 ul{
     list-style: none;
+ 
 }
-
 .section{
     background: var(--bg-black-900);
     min-height: 100vh;
     display: block;
-    position: flex;
-    padding-top: 50px;
-       /* padding-bottom: 4%; */
+    /* position: fixed; */
+    padding: 0 30px;
+    /* left: 0; */
+    /* top: 50px; */
+    /* right: 0; */
     opacity: 1;
 }
 .hidden{
-    display: none ! important;
+    display: none !important;
+}
+.main-content{
+    padding-left: 0;
+    margin-top: 50px; 
+    padding-right: 0;
 }
 .padd-15{
     padding-left: 15px;
-    padding-right: 15px
+    padding-right: 15px;
 }
 .container{
-    max-width: 1120px;
+    max-width: 1268px;
     width: 100%;
-    margin-left: 70px;
-    margin-right: 70px;
-    /* padding-bottom: 0%; */
-    /* background: yellowgreen; */
+    margin: auto; 
+    /* outline: 1px solid black; */
 }
 .section .container{
-    /* padding-top: 10px;    I can remove it */
-    padding-bottom: 70px;
+    padding-top: 60px;
+    padding-bottom: 70px
 }
 .section-title{
     flex: 0 0 100%;
@@ -66,15 +70,6 @@ ul{
     color: var(--text-black-900);
     font-weight: 700;
     position: relative;
-}
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -15px;
-    margin-right: -15px;
-    position: relative;
-    /* background: blue */
-
 }
 .section-title h2::before{
     content: '';
@@ -94,6 +89,13 @@ ul{
     top: 100%;
     left:0;
     margin-top: 9px;
+ }
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+    position: relative;
 }
 .btn{
     font-size: 16px;
@@ -102,521 +104,161 @@ ul{
     color: white;
     border-radius: 100px;
     border: none;
-    display: inline-block;
+    display: inline-block; 
     white-space: nowrap;
+    border: none;
     background: var(--skin-color);
     transition: all 0.3s ease;
 }
 .btn:hover{
     transform: scale(1.03);
 }
-.shadow-dark{
-    box-shadow: 0 0 20px rgba(48,46,77,0.15)
-}
-nav{
+.hero{
     width: 100%;
-    height: 50px;
-    border-bottom: 1.5px solid var(--bg-black-50);
     background: var(--bg-black-100);
+    padding-bottom: 28px;
     position: fixed;
-    padding-left: 25px;
     left: 0;
+    height: 50px;
     top: 0;
-    z-index:10;
+    z-index: 10;
 }
-nav .logo {
-    position: relative;
-    padding: 0 20px;
-    font-size: 30px;
-    padding-top: 0px;
-    letter-spacing: 5px;
-    font-weight: 700;
-    line-height: 42px;
-}
-nav .logo a{
-    position: relative;
-    color: var(--text-black-900);
-    padding: 6px 10px;
-    align-items: top;
-}
-nav .logo a span {
-    font-family: 'Clicker Script', cursive;
-    font-size: 33px;
-}
-  
-nav ul {
+.nav{
     float: right;
-    margin-right: 0px;
-    padding-right: 30px;
+    margin-right: 40px;
+    /* display: flex; */  
 }
-nav ul li {
+.nav li{
     display: inline-block;
     line-height: 50px;
-    margin: 0 25px;
-    align-content: center;
+    margin: 0 15px;
 }
-nav ul li a{
-    font-size:16px;
-    font-weight: 600;
-    display: block;
+.hero .logo{
+    position: absolute;
+    font-size: 30px;
+}
+.hero .logo a{
     color: var(--text-black-900);
+    font-weight: 700;
+    padding: 11px 20px;
+    font-size: 30px;
+    letter-spacing: 5px;
+    position: relative;
 }
-nav ul li a.active{
+.hero .logo a span{
+    font-family: 'Clicker Script', cursive;
+}
+.hero .nav-toggler{
+    height: 40px;
+    width: 45px;
+    border: 1px solid var(--bg-black-50);
+    cursor: pointer;
+    position: fixed;
+    left: 300px;
+    top: 5px;
+    border-radius: 5px;
+    background: var(--bg-black-100);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.hero .nav-toggler span{
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    display: inline-block;
+    position: relative;
+}
+.hero .nav-toggler span::before{
+    content: '';
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    position: absolute;
+    top: -6px;
+    left: 0;   
+}
+.hero .nav-toggler span::after{
+    content: '';
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    position: absolute;
+    top: 6px;
+    left: 0;   
+}
+ 
+.hero .nav li a{
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--text-black-900);
+    padding: 5px 15px;
+}
+.hero .nav li a.active{
     color: var(--skin-color);
 }
-nav ul li a.active-login{
-    background: var(--skin-color);
-    line-height: 28px;
-    padding: 0 30px;
-    color: white;
-    border-radius: 100px;
-    align-items: center;
-}
-.checkbutton{
-    font-size: 30px;
-    color:white;
-    float: right;
-    line-height: 60px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
-#check{
-    display:none;
-}
-
-/* HOME */
+ 
+/* Home */
 .home{
-    min-height: 100%;
+    min-height: 100vh;
     display: flex;
     color: var(--text-black-900);
 }
 .home .home-info{
-    flex: 0 0 55%;
-    max-width: 55%;
+    flex: 0 0 60%;
+    max-width: 60%;
 }
 h3.hello{
-    font-size: 27px;
-    margin: 100px 0 15px 0;
+    font-size: 28px;
+    margin: 15px 0;
 }
 h3.hello span{
     font-family: 'Clicker Script', cursive;
-    font-size: 29px;
+    font-size: 30px;
     font-weight: 700;
-    /* color: var(--skin-color); */
+    /* color: var(--skin-color); */           /*Name color on home page*/
 }
 h3.my-proffession{
-    font-size: 29px;
+    font-size: 30px;
     margin: 15px 0;
 }
 .typing{
-    color: var(--skin-color);
+    color: var(--skin-color)
 }
 .home-info p{
-    margin-bottom: 120px;
-    font-size: 19px;
-    color: var(--text-black-700)
+    margin-bottom: 70px;
+    font-size: 20px;
+    color: var(--text-black-700);
 }
 .home .home-img{
-    /* padding-top: 60px; */
     flex: 0 0 40%;
     max-width: 40%;
-    text-align:right;
+    /* background-color: red; */
+    text-align: center;
     position: relative;
-    /* background: red; */
 }
 .home-img::after{
-    content: "";
+    content: '';
     position: absolute;
     height: 60px;
     width: 80px;
     border-bottom: 13px solid var(--skin-color);
     border-right: 13px solid var(--skin-color);
-    right: -50px;
-    bottom: -50px;
+    right: 20px;
+    bottom: -40px;
 }
 .home-img::before{
-    content: "";
+    content: '';
     position: absolute;
     height: 60px;
     width: 80px;
     border-top: 13px solid var(--skin-color);
     border-left: 13px solid var(--skin-color);
-    left: 140px;
-    top: 50px;
+    left: 20px;
+    top: -40px;
 }
 .home .home-img img{
-    padding-top: 100px;
-    height: 450px;
-    width: 240px;
-}
-
-/* About page */
-
-.about .about-content{
-    flex: 0 0 100%;
-    max-width: 100%;
-    /* background-color: red; */
-}
-.about .about-content .about-text{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-.about .about-content .about-text h3{
-    font-size: 24px;
-    margin-bottom: 15px;
-    font-weight: 700;
-    color: var(--text-black-900)
-}
-.about .about-content .about-text h3 span{
-    color: var(--skin-color);
-
-}
-.about .about-content .about-text p{
-    font: size 16px;
-    line-height: 25px;
-    color: var(--text-black-700);
-}
-.about .about-content .personal-info{
-    margin-top: 30px;
-    flex: 0 0 60%;
-    max-width: 60%;
-    /* background-color:red; */
-}
-.about .about-content .personal-info .info-item{
-    flex: 0 0 50%;
-    max-width: 50%;
-    /* background-color:red; */
-    line-height: 40px;
-}
-.about .about-content .personal-info .info-item p{
-    font-weight: 600;
-    /* padding: 10px 0; */
-    font-size: 16px;
-    color: var(--text-black-900);
-    border-bottom: 1px solid var(--bg-black-50);
-}
-.about .about-content .personal-info .info-item p span{
-    font-weight: 400;
-    color: var(--text-black-700);
-    margin-left: 5px;
-    display:inline-block;
-
-}
-.about .about-content .personal-info .buttons{
-    padding-top: 30px;
-}
-.about .about-content .personal-info .buttons .btn{
-    margin-right: 50px;
-    margin-top: 10px;
-}
-.about .about-content .skills{
-    margin-top: 30px;
-    flex: 0 0 40%;
-    max-width: 40%;
-    /* background-color:green; */
-}
-.about .about-content .skills .skill-item{
-    flex: 0 0 100%;
-    max-width: 100%;
-    /* background-color: red; */
-}
-.about .about-content .skills .skill-item h5{
-    line-height: 30px;
-    font-size: 16px;
-    color: var(--text-black-900);
-    font-weight: 600;
-    
-}
-.about .about-content .skills .skill-item .progress{
-    background-color: var(--bg-black-50);
-    height: 7px;
-    width: 100%;
-    border-radius: 4px;
-    position: relative;
-}
-.about .about-content .skills .skill-item{
-    margin-bottom: 10px;
-}
-.about .about-content .skills .skill-item .progress .progress-in{
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    border-radius: 4px;
-    background-color: var(--skin-color);
-}
-.about .about-content .skills .skill-item .skill-percent{
-    position: absolute;
-    right: 0;
-    color: var(--text-black-900);
-    top: -40px;
-    line-height: 60px;
-    font-weight: 400;
-}
-.about .about-content .education,
-.about .about-content .experience
-{
-    flex: 0 0 50%;
-    max-width: 50%;
-    margin-top: 30px;
-    /* background-color: red; */
-}
-
-.about .about-content h3.title{
-    font-size: 24px;
-    margin-bottom: 30px;
-    font-weight: 400;
-    color: var(--text-black-900)
-} 
-.about .about-content .timeline-box{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-.about .about-content .timeline{
-    /* background-color: var(--bg-black-100); */
-    padding: 30px 15px; 
-    /* border: 1px solid var(--bg-black-50); */
-    /* border-radius: 10px; */
-    width: 100%;
-    position: relative;
-}
-.about .about-content .timeline .timeline-item{
-    position: relative;
-    padding-left: 37px;
-    padding-bottom: 50px;
-}
-.about .about-content .timeline .timeline-item:last-child{
-    padding-bottom: 0%;
-}
-.about .about-content .timeline .timeline-item::before{
-    content: '';
-    width: 1px;
-    position:absolute;
-    height: 100%;
-    top: 0;
-    left: 7px;
-    background-color: var(--skin-color);
-}
-.about .about-content .timeline .circle-dot{
-    position:absolute;
-    left:0;
-    top:0;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    background-color: var(--skin-color);
-}
-.about .about-content .timeline .timeline-date{
-    font-weight: 400;
-    font-size: 12px;
-    margin-bottom:10px;
-    color: var(--text-black-700);
-}
-.about .about-content .timeline .timeline-date{
-    margin-right: 5px;
-}
-.about .about-content .timeline .timeline-title{
-    font-weight: 700;
-    font-size: 18px;
-    margin-bottom: 15px;
-    /* text-transform: capitalize; */
-    color: var(--text-black-900)
-}
-.about .about-content .timeline .timeline-text{
-    line-height: 25px;
-    font-size: 16px;
-    text-align: justify;
-    color: var(--text-black-700);
-}
-/* .portfolio .portfolio-content .left-porfolio-items,
-.portfolio .portfolio-content .right-porfolio-items{
-    flex: 0 0 50%;
-    max-width: 50%;
-    display: inline-flex;
-} */
-.left, 
-.right{
-    /* margin-left: 22%;
-    padding-right: 60px; */
-    flex: 0 0 50%;
-    max-width: 50%;
-}
-
-.portfolio .portfolio-content .portfolio-item{
-    /* display: inline-flex; */
-    padding-left: 20px;
-    top: 0;
-    justify-content: space-between;
-    display: inline-block;
-    margin-right: 10%;
-}
-.portfolio .portfolio-content .portfolio-item .portfolio-img{
-    padding-left: 20px;
-    display: flex;
-    position: relative;
-    max-width: 100%;
-    /* border: 1px solid var(--text-black-700); */
-    /* background-color: red; */
-    text-align: center;
-    /* background-size: cover; */
-    height: 180px;
-    width: 600px;
-    z-index: 0;
-}
-.portfolio .portfolio-content .portfolio-item .img-discription{
-    width: 42%;
-    margin-top: -9%;
-    margin-left: 26%;
-    position: relative;
-    border-radius: 12px;
-    z-index: 1;
-    background-color: #E8E8FC;
-    margin-bottom: 40px; 
-}
-
-.portfolio .portfolio-content .portfolio-item .img-discription .img-title{
-    display: flex; 
-    font-size: 17px;
-    font-weight: 700;
-    color: var(--text-black-900);
-    padding-bottom: 15px;
-    justify-content: center; 
-}
-.portfolio .portfolio-content .portfolio-item .img-discription .img-text{
-    display: flex;
-    font-size: 16px;
-    text-align: center;
-    color: var(--text-black-700);
-}
-.blog-two{
-    width: 100%;
-    margin-top: -38.5%;
-    margin-left: 35%;    
-}
-.blog-three{
-    width: 100%;
-    margin-top: -38.5%;
-    margin-left: 70%;
-}
-.two{
-    /* display: block;
-    width: 100%;    */
-}
-.blog .blog-info .blog-text{
-    font-size: 18px;
-    font-weight: 400;
-    padding-top: 0;
-    color: var(--text-black-900);
-    margin-left: 30px;
-    margin-bottom: 20px;
-}
-.blog .blog-item .blog-photo{
-    display: flex;
-    position: relative;
-    height: 300px;
-    max-width: 100%;
-    margin-left: 30px;
-    padding-bottom: 5px;
-}
-.blog .blog-item .blog-details{
-    margin-left: 30px;
-    padding-bottom: 5px;
-    margin-bottom: 50px;
-    background-color: #E8E8FC;
-    width: 24.5%;
+    margin: auto;
     border-radius: 5px;
-    padding-left: 10px;   
-} 
-.blog .blog-item .blog-details .title{
-    font-size: 18px;
-    font-weight: 700;
-    color: var(--text-black-900);
-}
-.blog .blog-item .blog-details .blog-descrption{
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--text-black-700),
-}
-.blog .blog-item .blog-details .blog-descrption span{
-    text-decoration: underline;
-}
-
-
-.contact-title{
-    color: var(--skin-color);
-    text-align: center;
-    font-size: 25px;
-    margin-bottom: 20px;
-}
-.contact-sub-title{
-    color: var(--text-black-900);
-    text-align: center;
-    font-size: 15px;
-    margin-bottom: 60px
-}
-.contact .contact-info-item{
-    flex: 0 0 25%;
-    max-width: 25%;
-    text-align: center; 
-     margin-bottom: 60px;
-}
-.contact .contact-info-item .icon{
-    display: inline-block;
-}
-.contact .contact-info-item .icon .fa{
-    font-size:  25px;
-    color: var(--skin-color);
-}
-.contact .contact-info-item .h4{
-    font-size: 18px;
-    font-weight: 700;
-    color: var(--text-black-900);
-    text-transform: capitalize;
-    margin: 15px 0 5px;
-}
-.contact .contact-info-item p{
-    font-size: 16px;
-    line-height: 25px;
-    color: var(--text-black-700);
-    font-weight: 400;
-}
-
-.contact .contact-form{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-.contact .contact-form .col-6{
-    flex: 0 0 50%;
-    max-width: 50%;
-    
-    /* background-color: red; */
-}
-.contact .contact-form .col-12{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-.contact .contact-form .form-item{
-    margin-bottom: 30px;
-}
-.contact .contact-form .form-item .form-control{
-    width: 100%;
-    height: 50px;
-    border-radius: 25px;
-    background: var(--bg-black-100);
-    border: 1px solid var(--bg-black-50);
-    padding: 10px 25px;
-    font-size: 16px;
-    color: var(--text-black-700);
-    transition: all 0.3s ease;
-}
-.contact .contact-form .form-item .form-control:focus{
-    box-shadow: 0 0 20px rgba(48,46,77,0.15);
-}
-.contact .contact-form .form-item textarea.form-control{
-    height: 140px;
-}
-.contact .contact-form .btn{
-    height: 50px;
-    padding: 0 50px;
+    height: 400px;
 }
