--- a/css/style.css
+++ b/css/style.css
@@ -474,3 +474,58 @@ h3.my-proffession{
     text-align: center;
     color: var(--text-black-700);
 }
+ 
+/* Blog */
+.blog .blog-item{
+    margin-top: 15px;
+    /* outline: 2px solid yellow; */
+    flex: 0 0 33.3%;
+    width: 33.3%;
+    /* background-color: red; */
+}
+.blog .parent-item{
+    /* outline: 2.3px solid black; */
+    display: flex;
+}
+ 
+.blog .blog-info .blog-text{
+    font-size: 18px;
+    font-weight: 400;
+    padding-top: 0;
+    color: var(--text-black-900);
+    margin-left: 30px;
+    margin-bottom: 20px;
+}
+.blog .blog-item .blog-photo{
+    display: flex;
+    position: relative;
+    height: 300px;
+    max-width: 100%;
+    margin-left: 18%;
+    padding-bottom: 5px;
+}
+.blog .blog-item .blog-photo img{
+    /* width: 300px; */
+}
+.blog .blog-item .blog-details{
+    padding-bottom: 5px;
+    background-color: #E8E8FC;
+    width: 65%;
+    border-radius: 5px;
+    padding-left: 10px;
+    margin: auto;
+} 
+.blog .blog-item .blog-details .title{
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--text-black-900);
+}
+.blog .blog-item .blog-details .blog-descrption{
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-black-700);
+}
+.blog .blog-item .blog-details .blog-descrption span{
+    text-decoration: underline;
+    cursor: pointer;
+}
