--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,8 @@ ul{
     /* outline: 1px solid black; */
 }
 .section .container{
-    padding-top: 60px;
-    padding-bottom: 70px
+    padding-top: 35px;
+    padding-bottom: 45px
 }
 .section-title{
     flex: 0 0 100%;
@@ -102,7 +102,7 @@ ul{
 .btn{
     font-size: 16px;
     font-weight: 500;
-    padding: 8px 35px;
+    padding: 7px 35px;
     color: white;
     border-radius: 100px;
     border: none;
@@ -201,6 +201,32 @@ ul{
 }
 .hero .nav li a.active{
     color: var(--skin-color);
+}
+.hero .nav li a:hover{
+    color: var(--skin-color);
+}
+.nav li a.active-login{
+    background: var(--skin-color);
+    border-radius: 100px;
+    font-weight: 600;
+    color: white;
+}
+.nav li a.active-login:hover{
+    background: var(--bg-black-100);
+    border: 1px solid var(--skin-color);
+    border-radius: 100px;
+    color: var(--skin-color);
+}
+.nav li a.tap-login{
+    border: 1px solid var(--skin-color);
+    border-radius: 100px;
+    color: var(--skin-color);
+}
+.nav li a.tap-login:hover{
+    background: var(--skin-color);
+    border-radius: 100px;
+    font-weight: 600;
+    color: white;
 }
  
 /* Home */
@@ -378,7 +404,7 @@ h3.my-proffession{
     max-width: 100%;
 }
 .about .about-content .timeline{
-    background-color: var(--bg-black-100);
+    /* background-color: var(--bg-black-100); */
     padding: 30px 15px;
     border: 1px solid var(--bg-black-50);
     border-radius: 10px;
@@ -549,7 +575,7 @@ h3.my-proffession{
     flex: 0 0 25%;
     max-width: 25%;
     text-align: center;
-     margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 .contact .contact-info-item .icon{
     display: inline-block;
@@ -557,12 +583,12 @@ h3.my-proffession{
 .contact .contact-info-item .icon .fa{
     font-size:  25px;
     color: var(--skin-color);
+    cursor: pointer;
 }
 .contact .contact-info-item .h4{
     font-size: 18px;
     font-weight: 700;
     color: var(--text-black-900);
-    text-transform: capitalize;
     margin: 15px 0 5px;
 }
 .contact .contact-info-item p{
@@ -587,12 +613,12 @@ h3.my-proffession{
     max-width: 100%;
 }
 .contact .contact-form .form-item{
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 .contact .contact-form .form-item .form-control{
     width: 100%;
     height: 50px;
-    border-radius: 25px;
+    border-radius: 15px;
     background: var(--bg-black-100);
     border: 1.5px solid var(--bg-black-50);
     padding: 10px 25px;
@@ -606,13 +632,363 @@ h3.my-proffession{
 .contact .contact-form .form-item textarea.form-control{
     height: 140px;
 }
-.contact .contact-form .btn{
-    height: 50px;
-    padding: 0 50px;
+.contact .contact-form .form-item textarea::-webkit-input-placeholder{
+    font-family: 'sans-serif';
 }
- 
-@media (max-width: 814px){
-   
+.contact .contact-form .btn{
+    height: 40px;
+    padding: 0 40px;
+}
+
+/* Login Page */
+.login .login-form{
+    margin-top: 65px;
+    width: 32%;
+    margin-left: 34%;
+    padding: 10px 25px 25px;
+    background: #eeeefc;
+    outline: 1px solid rgb(233, 233, 233);
+    border-radius: 10px;
+}
+.login .login-form .login-title{
+    text-align: center;
+    padding-top: 15px;
+    font-size: 27px;
+    color: var(--skin-color);
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.login .login-form .heading-input{
+    font-size: 18px;
+    padding-left: 10px;
+    color: var(--text-black-900);
+}
+input,
+input::-webkit-input-placeholder {  
+    font-size: 16px;
+    line-height: 3;
+    font-family: 'sans-serif';
+}
+.login .login-form .form-control{
+    width: 100%;
+    height: 40px;
+    border-radius: 15px;
+    border: 1.5px solid var(--skin-color);
+    padding: 10px 15px;
+    font-size: 16px;
+    color: var(--text-black-700);
+    margin-bottom: 17px;
+}
+.login .login-form .signup-option{
+    color: var(--text-black-700)
+}
+.login .login-form .signup-option a{
+    color: var(--skin-color);
+    font-weight: 400;
+}
+.login .ticking{
+    display: flex;
+}
+.login .ticking .infront-word{
+    padding-left: 8px;
+    color: var(--text-black-900)
+}
+.login .boxes{
+    margin-bottom: 10px;
+}
+.login .log{
+    border: none;
+    padding: 4px 20px;
+    font-family: 'sans-serif';
+    font-weight: 400;
+    margin-left: 80%;
+    font-size: 14px;
+    color: var(--bg-black-100);
+    text-align: center;
+    background-color: var(--skin-color);
+    border-radius: 13px;
+    margin-bottom: 25px;
+    cursor: pointer;
+}
+
+
+@media (max-width: 305.9px){
+    ul{
+        display: none;
+    }
+    .hero{
+        position: fixed;
+        width: 100%;
+    }
+    .hero .nav-toggler{
+        left: 210px;
+        display: flex;
+    }
+    .contact .contact-info-item,
+    .about .about-content .personal-info,
+    .about .about-content .personal-info .info-item,
+    .about .about-content .skills,
+    .about .about-content .education,
+    .about .about-content .experience,
+    .portfolio .portfolio-item,
+    .blog .blog-item,
+    .contact .contact-form .col-6{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .portfolio .portfolio-item .portfolio-img img{
+        width: 180px;
+        height: 100px;
+    }
+    .portfolio .portfolio-item .img-discription{
+        margin-top: -35%;
+        margin-left: 44%;
+    }
+    .portfolio .portfolio-item .img-discription .img-title{
+        font-size: 15px;
+    } 
+    .portfolio .portfolio-item .img-discription .img-text{
+        font-size: 13px;
+    }  
+    .blog .blog-item{
+        width: 100%;
+    }
+    .blog .blog-item .blog-photo{
+        margin-left: 1%;
+        padding-bottom: 7px;
+    }
+    
+    
+    .blog .parent-item{
+        display: block;
+    }
+}
+@media (min-width: 306px) and (max-width: 345.9px){
+    ul{
+        display: none;
+    }
+    .hero{
+        position: fixed;
+        width: 100%;
+    }
+    .hero .nav-toggler{
+        left: 260px;
+        display: flex;
+    }
+    .contact .contact-info-item,
+    .about .about-content .personal-info,
+    .about .about-content .personal-info .info-item,
+    .about .about-content .skills,
+    .about .about-content .education,
+    .about .about-content .experience,
+    .portfolio .portfolio-item,
+    .blog .blog-item,
+    .contact .contact-form .col-6{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .portfolio .portfolio-item .portfolio-img img{
+        width: 210px;
+    }
+    .portfolio .portfolio-item .img-discription{
+        margin-top: -15%;
+        margin-left: 44%;
+    }
+    .blog .blog-item{
+        width: 100%;
+    }
+    .blog .blog-item .blog-photo{
+        margin-left: 14%;
+        padding-bottom: 7px;
+    }
+    
+    .blog .parent-item{
+        display: block;
+    }
+}
+@media (min-width: 346px) and (max-width: 434.9px){
+    ul{
+        display: none;
+    }
+    .hero{
+        position: fixed;
+        width: 100%;
+    }
+    .hero .nav-toggler{
+        display: flex;
+    }
+    .about .about-content .personal-info,
+    .about .about-content .personal-info .info-item,
+    .about .about-content .skills,
+    .about .about-content .education,
+    .about .about-content .experience,
+    .portfolio .portfolio-item,
+    .blog .blog-item,
+    .contact .contact-form .col-6{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .portfolio .portfolio-item .portfolio-img img{
+        width: 230px;
+    }
+    .portfolio .portfolio-item .img-discription{
+        margin-top: -15%;
+        margin-left: 44%;
+    }
+    .blog .blog-item{
+        width: 80%;
+    }
+    .blog .blog-item .blog-photo{
+        margin-left: 16%;
+        padding-bottom: 7px;
+    }
+    
+    .blog .parent-item{
+        display: block;
+    }
+}
+@media (min-width: 435px) and (max-width: 497.9px){
+    ul{
+        display: none;
+    }
+    .hero{
+        position: fixed;
+        width: 100%;
+    }
+    .hero .nav-toggler{
+        display: flex;
+        margin-left: 20%;
+    }
+    .about .about-content .personal-info,
+    .about .about-content .skills,
+    .about .about-content .education,
+    .about .about-content .experience,
+    .portfolio .portfolio-item,
+    .blog .blog-item,
+    .contact .contact-form .col-6{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .blog .blog-item{
+        width: 80%;
+    }
+    .blog .blog-item .blog-photo{
+        margin-left: 12%;
+        padding-bottom: 7px;
+    }
+    
+    .blog .parent-item{
+        display: block;
+    }
+}
+@media (min-width: 498px) and (max-width: 586.9px){
+    ul{
+        display: none;
+    }
+    .hero{
+        position: fixed;
+        width: 100%;
+    }
+    .hero .nav-toggler{
+        display: flex;
+        margin-left: 30%;
+    }
+    .blog .blog-item,
+    .portfolio .portfolio-item,
+    .about .about-content .personal-info,
+    .about .about-content .skills,
+    .about .about-content .education,
+    .about .about-content .experience{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .blog .blog-item{
+        width: 80%;
+    }
+    .blog .blog-item .blog-photo{
+        margin-left: 12%;
+        padding-bottom: 7px;
+    }
+    
+    .blog .parent-item{
+        display: block;
+    }
+}
+@media (min-width: 587px) and (max-width: 699.9px) {
+    .hero{
+        position: fixed;
+        width: 100%;
+    }
+    .hero .nav-toggler{
+        display: flex;
+        margin-left: 41%;
+    }
+    ul{
+        display: none;
+    }
+    .main-content{
+        background: var(--bg-black-900);
+        width: 100%;
+        padding-left: 0;
+        margin-top: 50px;
+        padding-right: 0;
+    }
+    .blog .blog-item,
+    .portfolio .portfolio-item,
+    .about .about-content .personal-info,
+    .about .about-content .skills,
+    .about .about-content .education,
+    .about .about-content .experience{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .blog .blog-item{
+        width: 80%;
+    }
+    .blog .blog-item .blog-photo{
+        margin-left: 10%;
+        padding-bottom: 7px;
+    }
+    .blog .parent-item{
+        display: block;
+    }
+    .portfolio .portfolio-item .img-discription{
+        margin-top: -10%;
+    }
+    
+}  
+@media (min-width: 700px) and (max-width: 799px) {
+    .hero{
+        position: fixed;
+    }
+    .hero .nav-toggler{
+        display: flex;
+        margin-left: 50%;
+        /* position: absolute; */
+    }
+    ul{
+        display: none;
+    }
+    .main-content{
+        background: var(--bg-black-900);
+        padding-left: 0;
+        margin-top: 50px;
+        padding-right: 0;
+    }
+    .blog .parent-item .blog-item .blog-photo img{
+        margin-left: 5px;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .blog .blog-item .blog-details{
+        width: 94%;
+    }
+}
+@media (min-width: 346px) and (max-width: 959.9px){   
+    .contact .contact-info-item{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
 }
 @media (max-width: 959.9px){
     .home .home-img{
@@ -621,6 +997,10 @@ h3.my-proffession{
     .home .home-info{
         flex: 0 0 100%;
         max-width: 100%;
+    }
+    .about .about-content .personal-info .info-item p span{
+        display: block;
+        margin-left: 0;
     }
     .portfolio .portfolio-item{
         padding-left: 30px;
@@ -637,11 +1017,9 @@ h3.my-proffession{
         width: 226px;
     }
     .blog .blog-item .blog-details{
-        width: 82%;
-        margin-left: 48px;
+        width: 84%;
+        margin-left: 42px;
     }
-   
- 
 }
 @media (min-width: 960px) and (max-width: 1024.9px){
     .portfolio .portfolio-item .portfolio-img{
