--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --bg-black-50:#e8dfec;
     --text-black-900:#302e4d;
     --text-black-700:#504e70;
+    --skin-color:#FFA500;
 }
 body{
     line-height: 1.5;
@@ -173,6 +174,8 @@ ul{
     background: var(--skin-color);
     display: inline-block;
     position: relative;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 .hero .nav-toggler span::before{
     content: '';
@@ -182,6 +185,8 @@ ul{
     position: absolute;
     top: -6px;
     left: 0;  
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 .hero .nav-toggler span::after{
     content: '';
@@ -234,6 +239,7 @@ ul{
     min-height: 100vh;
     display: flex;
     color: var(--text-black-900);
+    background-image: url(../images/pictures/home-background.png);
 }
 .home .home-info{
     flex: 0 0 60%;
@@ -509,11 +515,13 @@ h3.my-proffession{
     /* outline: 2px solid yellow; */
     flex: 0 0 33.3%;
     width: 33.3%;
+    display: inline-block;
+    margin-bottom: 2em;
     /* background-color: red; */
 }
 .blog .parent-item{
     /* outline: 2.3px solid black; */
-    display: flex;
+    /* display: flex; */
 }
  
 .blog .blog-info .blog-text{
@@ -533,7 +541,7 @@ h3.my-proffession{
     padding-bottom: 5px;
 }
 .blog .blog-item .blog-photo img{
-    /* width: 100px; */
+    width: 80%;
 }
 .blog .blog-item .blog-details{
     padding-bottom: 5px;
@@ -553,10 +561,46 @@ h3.my-proffession{
     font-weight: 500;
     color: var(--text-black-700);
 }
-.blog .blog-item .blog-details .blog-descrption span{
+.blog .blog-item .blog-details .blog-descrption a{
     text-decoration: underline;
+    color: var(--text-black-700);
     cursor: pointer;
 }
+
+/* More info info on the blog */
+.more-details .full-detail .img-description{ 
+    margin-left: 50%;
+} 
+.more-details .full-detail .img-description .blogTitle{
+    color: var(--text-black-900);
+    font-size: 24px;
+    padding-bottom: 20px;
+}
+.more-details .usercomments {
+    padding-left: 10px;
+    margin-top: 30px;
+    margin-right: 60%;
+    border: 1px solid black;
+}
+.image {
+    margin-top: -62%;
+}
+
+.image .allComment {
+ margin-top: 20px;
+}
+.usercomments {
+    margin-bottom: 20px;
+}
+form {
+    margin-top: 50px;
+}
+
+.formTitle {
+    font-size: 18px;
+    color: var(--text-black-900);
+}
+
  
 /* Contact */
 .contact-title{
@@ -638,6 +682,7 @@ h3.my-proffession{
 .contact .contact-form .btn{
     height: 40px;
     padding: 0 40px;
+    cursor: pointer;
 }
 
 /* Login Page */
@@ -714,7 +759,22 @@ input::-webkit-input-placeholder {
 
 @media (max-width: 305.9px){
     ul{
-        display: none;
+        /* display: none; */
+        position: fixed;
+        left: 100%;
+        top: 50px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--bg-black-100);
+        width: 60%;
+        text-align: center;
+        transition: 0.4s;
+    }
+    .nav-item{
+        margin: 5px 0;
+    }
+    .nav.active{
+        left: 40%;
     }
     .hero{
         position: fixed;
@@ -723,6 +783,17 @@ input::-webkit-input-placeholder {
     .hero .nav-toggler{
         left: 210px;
         display: flex;
+    }
+    .hero .nav-toggler.active span{
+        top: -4px;
+        background: var(--bg-black-100);
+    }
+    .hero .nav-toggler.active span:before{
+        
+        transform: translateY(10px) rotate(45deg);
+    }
+    .hero .nav-toggler.active span:after{
+        transform: translateY(-2px) rotate(-45deg);
     }
     .contact .contact-info-item,
     .about .about-content .personal-info,
@@ -765,7 +836,22 @@ input::-webkit-input-placeholder {
 }
 @media (min-width: 306px) and (max-width: 345.9px){
     ul{
-        display: none;
+        /* display: none; */
+        position: fixed;
+        left: 100%;
+        top: 50px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--bg-black-100);
+        width: 60%;
+        text-align: center;
+        transition: 0.4s;
+    }
+    .nav-item{
+        margin: 5px 0;
+    }
+    .nav.active{
+        left: 40%;
     }
     .hero{
         position: fixed;
@@ -774,6 +860,17 @@ input::-webkit-input-placeholder {
     .hero .nav-toggler{
         left: 260px;
         display: flex;
+    }
+    .hero .nav-toggler.active span{
+        top: -4px;
+        background: var(--bg-black-100);
+    }
+    .hero .nav-toggler.active span:before{
+        
+        transform: translateY(10px) rotate(45deg);
+    }
+    .hero .nav-toggler.active span:after{
+        transform: translateY(-2px) rotate(-45deg);
     }
     .contact .contact-info-item,
     .about .about-content .personal-info,
@@ -808,7 +905,21 @@ input::-webkit-input-placeholder {
 }
 @media (min-width: 346px) and (max-width: 434.9px){
     ul{
-        display: none;
+        position: fixed;
+        left: 100%;
+        top: 50px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--bg-black-100);
+        width: 45%;
+        text-align: center;
+        transition: 0.4s;
+    }
+    .nav-item{
+        margin-right: 10%; 
+    }
+    .nav.active{
+        left:45%;
     }
     .hero{
         position: fixed;
@@ -816,6 +927,17 @@ input::-webkit-input-placeholder {
     }
     .hero .nav-toggler{
         display: flex;
+    }
+    .hero .nav-toggler.active span{
+        top: -4px;
+        background: var(--bg-black-100);
+    }
+    .hero .nav-toggler.active span:before{
+        
+        transform: translateY(10px) rotate(45deg);
+    }
+    .hero .nav-toggler.active span:after{
+        transform: translateY(-2px) rotate(-45deg);
     }
     .about .about-content .personal-info,
     .about .about-content .personal-info .info-item,
@@ -849,7 +971,21 @@ input::-webkit-input-placeholder {
 }
 @media (min-width: 435px) and (max-width: 497.9px){
     ul{
-        display: none;
+        position: fixed;
+        left: 100%;
+        right: 0%;
+        top: 50px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--bg-black-100);
+        text-align: center;
+        transition: 0.4s;
+    }
+    .nav-item{
+        margin: 5px 0;
+    }
+    .nav.active{
+        left:50%;
     }
     .hero{
         position: fixed;
@@ -858,6 +994,17 @@ input::-webkit-input-placeholder {
     .hero .nav-toggler{
         display: flex;
         margin-left: 20%;
+    }
+    .hero .nav-toggler.active span{
+        top: -4px;
+        background: var(--bg-black-100);
+    }
+    .hero .nav-toggler.active span:before{
+        
+        transform: translateY(10px) rotate(45deg);
+    }
+    .hero .nav-toggler.active span:after{
+        transform: translateY(-2px) rotate(-45deg);
     }
     .about .about-content .personal-info,
     .about .about-content .skills,
@@ -883,7 +1030,23 @@ input::-webkit-input-placeholder {
 }
 @media (min-width: 498px) and (max-width: 586.9px){
     ul{
-        display: none;
+        /* display: none; */
+        position: fixed;
+        left: 100%;
+        right: 0%;
+        top: 50px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--bg-black-100);
+        width: 40%;
+        text-align: center;
+        transition: 0.4s;
+    }
+    .nav-item{
+        margin: 5px 0;
+    }
+    .nav.active{
+        left:50%;
     }
     .hero{
         position: fixed;
@@ -892,6 +1055,17 @@ input::-webkit-input-placeholder {
     .hero .nav-toggler{
         display: flex;
         margin-left: 30%;
+    }
+    .hero .nav-toggler.active span{
+        top: -4px;
+        background: var(--bg-black-100);
+    }
+    .hero .nav-toggler.active span:before{
+        
+        transform: translateY(10px) rotate(45deg);
+    }
+    .hero .nav-toggler.active span:after{
+        transform: translateY(-2px) rotate(-45deg);
     }
     .blog .blog-item,
     .portfolio .portfolio-item,
@@ -924,7 +1098,23 @@ input::-webkit-input-placeholder {
         margin-left: 41%;
     }
     ul{
-        display: none;
+        /* display: none; */
+        position: fixed;
+        left: 100%;
+        right: 0%;
+        top: 50px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--bg-black-100);
+        width: 30%;
+        text-align: center;
+        transition: 0.4s;
+    }
+    .nav-item{
+        margin: 5px 0;
+    }
+    .nav.active{
+        left:50%;
     }
     .main-content{
         background: var(--bg-black-900);
@@ -932,6 +1122,21 @@ input::-webkit-input-placeholder {
         padding-left: 0;
         margin-top: 50px;
         padding-right: 0;
+    }
+    .hero .nav-toggler{
+        display: flex;
+        margin-left: 30%;
+    }
+    .hero .nav-toggler.active span{
+        top: -4px;
+        background: var(--bg-black-100);
+    }
+    .hero .nav-toggler.active span:before{
+        
+        transform: translateY(10px) rotate(45deg);
+    }
+    .hero .nav-toggler.active span:after{
+        transform: translateY(-2px) rotate(-45deg);
     }
     .blog .blog-item,
     .portfolio .portfolio-item,
@@ -967,13 +1172,44 @@ input::-webkit-input-placeholder {
         /* position: absolute; */
     }
     ul{
-        display: none;
+        /* display: none; */
+        position: fixed;
+        left: 100%;
+        right: 0%;
+        top: 50px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--bg-black-100);
+        width: 20%;
+        text-align: center;
+        transition: 0.4s;
+    }
+    .nav-item{
+        margin: 5px 0;
+    }
+    .nav.active{
+        left:50%;
     }
     .main-content{
         background: var(--bg-black-900);
         padding-left: 0;
         margin-top: 50px;
         padding-right: 0;
+    }
+    .hero .nav-toggler{
+        display: flex;
+        margin-left: 30%;
+    }
+    .hero .nav-toggler.active span{
+        top: -4px;
+        background: var(--bg-black-100);
+    }
+    .hero .nav-toggler.active span:before{
+        
+        transform: translateY(10px) rotate(45deg);
+    }
+    .hero .nav-toggler.active span:after{
+        transform: translateY(-2px) rotate(-45deg);
     }
     .blog .parent-item .blog-item .blog-photo img{
         margin-left: 5px;
