--- a/Dashboard/css/style.css
+++ b/Dashboard/css/style.css
@@ -369,7 +369,8 @@ tr:hover {
 }
 
 .view, .update, .delete {
-    margin-right: 13%;
+    margin-right: 7%;
+    /* display: block; */
 }
 .view {
     color: #ffa600;
@@ -381,6 +382,20 @@ tr:hover {
 }
 .delete{
     color: red;
+    cursor: pointer;
+}
+.p-3 {
+    margin-top: 10%;
+    margin-left: 10%;
+
+    padding-left: 20px;
+    padding-right: 20%;
+    border: 1px solid #cfcfc9;
+    border-radius: 5px;
+    width: 100%;
+}
+
+.btn-primary-1 {
     cursor: pointer;
 }
 
